--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=https://yangganmu-my.sharepoint.com/:f:/g/personal/yangganmu_yangganmu_onmicrosoft_com/EvzsVOYs6eZAmd6Eq-ydQr0Bo3_VrvCx1TcixhG8f4QbvQ?e=ou89LS">
+    <title>index</title>
+</head>
+<body>
 
+</body>
+</html>
