--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://yangganmu-my.sharepoint.com/:f:/g/personal/yangganmu_yangganmu_onmicrosoft_com/EvzsVOYs6eZAmd6Eq-ydQr0Bo3_VrvCx1TcixhG8f4QbvQ?e=ou89LS">
+    <link href="./style.css" type="text/css" rel="stylesheet">
     <title>index</title>
 </head>
 <body>
+    <header>
+        <div>
+            <p>本站仅用于学术研究及效果演示。网页已开源，<a href="https://github.com/yangganmu/yangganmu.github.io" target="_blank" rel="external nofollow">点击查看</a>，商业用途请自行建站。</p>
+            <p>本网站提醒您：在访问本网站搜索的第三方网站前，请您务必仔细阅读并透彻理解本声明。您可以选择离开本网站，但如果您访问本网站搜索的第三方网站，您的访问行为将被视为对本声明全部内容的认可。</p>
+            <p>您应该对访问本网站搜索的第三方网站的结果自行承担风险。本网站不做任何形式的保证：不保证搜集到的第三方资源满足您的要求，不保证搜集到的第三方资源的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用本网站，本网站不承担任何法律责任。</p>
+            <p>本网站尊重并保护所有使用本网站用户的个人隐私权，未保存任何个人资料。</p>
+            <p>本网站没有存储任何文件，下载链接由第三方存储站点提供。 但是如果任何单位或个人认为通过本网站搜索链接到的资源可能涉嫌侵犯其信息网络传播权等合法权利，应该及时向本网站提出权利通知，并提供身份证明、权属证明及详细侵权情况证明。本网站在收到上述文件后，将会尽快协助屏蔽本站的相关内容。</p>
+            <p>本网站在努力屏蔽一切不良信息，但是网络中的资源是实时变化的，请您在发现不良信息时及时反馈给我们。谢谢！</p>
+        </div>
+    </header>
+    <main>
+        <div>
+            <div>
+                <a target="_blank" href="https://yangganmu-my.sharepoint.com/:f:/g/personal/yangganmu_yangganmu_onmicrosoft_com/EvzsVOYs6eZAmd6Eq-ydQr0Bo3_VrvCx1TcixhG8f4QbvQ?e=ou89LS" rel="external nofollow">
+                    OneDrive
+                </a>
+            </div>
+            <div>
+                <a href="">FTP(暂时无法访问)</a>
+            </div>
+            <div>
+                <a href="">JellyFin(暂时无法访问)</a>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <p>
+                Email: yangganmu@gmaile.com
+            </p>
+        </div>
+    </footer>
 
 </body>
+<script language="JavaScript">
+
+</script>
 </html>
